create var from return value